--- a/can-test.ioc
+++ b/can-test.ioc
@@ -28,6 +28,7 @@ Mcu.Pin1=PH0-OSC_IN
 Mcu.Pin10=PB8
 Mcu.Pin11=PB9
 Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin2=PH1-OSC_OUT
 Mcu.Pin3=PC0
 Mcu.Pin4=PC6
@@ -36,7 +37,7 @@ Mcu.Pin6=PC8
 Mcu.Pin7=PC9
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=13
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RCTx
@@ -168,8 +169,11 @@ TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Pulse-PWM Generation1 CH1
-TIM8.Pulse-PWM\ Generation1\ CH1=4000
+TIM8.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Channel-PWM Generation1 CH1,Period,Prescaler
+TIM8.Period=19999
+TIM8.Prescaler=167
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM8_VS_ClockSourceINT.Mode=Internal
+VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 board=custom
