--- a/can-test.ioc
+++ b/can-test.ioc
@@ -24,20 +24,21 @@ Mcu.IPNb=5
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
-Mcu.Pin1=PH0-OSC_IN
-Mcu.Pin10=PB8
-Mcu.Pin11=PB9
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin2=PH1-OSC_OUT
-Mcu.Pin3=PC0
-Mcu.Pin4=PC6
-Mcu.Pin5=PC7
-Mcu.Pin6=PC8
-Mcu.Pin7=PC9
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=14
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA14
+Mcu.Pin11=PB8
+Mcu.Pin12=PB9
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin2=PH0-OSC_IN
+Mcu.Pin3=PH1-OSC_OUT
+Mcu.Pin4=PC0
+Mcu.Pin5=PC6
+Mcu.Pin6=PC7
+Mcu.Pin7=PC8
+Mcu.Pin8=PC9
+Mcu.Pin9=PA13
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RCTx
@@ -65,16 +66,21 @@ PB8.Signal=CAN1_RX
 PB9.Locked=true
 PB9.Mode=CAN_Activate
 PB9.Signal=CAN1_TX
+PC0.GPIOParameters=PinState
 PC0.Locked=true
+PC0.PinState=GPIO_PIN_RESET
 PC0.Signal=GPIO_Output
 PC13.GPIOParameters=PinState
 PC13.Locked=true
 PC13.PinState=GPIO_PIN_SET
 PC13.Signal=GPIO_Output
+PC14-OSC32_IN.GPIOParameters=PinState
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.PinState=GPIO_PIN_SET
+PC14-OSC32_IN.Signal=GPIO_Output
 PC6.Signal=S_TIM8_CH1
 PC7.Signal=S_TIM8_CH2
 PC8.Signal=S_TIM8_CH3
-PC9.Locked=true
 PC9.Signal=S_TIM8_CH4
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
@@ -169,7 +175,7 @@ TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM8.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Channel-PWM Generation1 CH1,Period,Prescaler
+TIM8.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation1 CH1,Period,Prescaler,Channel-PWM Generation4 CH4
 TIM8.Period=19999
 TIM8.Prescaler=167
 VP_SYS_VS_Systick.Mode=SysTick
