--- a/can-test.ioc
+++ b/can-test.ioc
@@ -10,35 +10,47 @@ CAN1.CalculateTimeQuantum=47.61904761904762
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler,NART
 CAN1.NART=ENABLE
 CAN1.Prescaler=2
+CAN2.BS1=CAN_BS1_10TQ
+CAN2.BS2=CAN_BS2_3TQ
+CAN2.CalculateBaudRate=1000000
+CAN2.CalculateTimeBit=1000
+CAN2.CalculateTimeQuantum=71.42857142857143
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,NART,BS2,BS1
+CAN2.NART=DISABLE
+CAN2.Prescaler=3
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F446RCT6
 Mcu.Family=STM32F4
 Mcu.IP0=CAN1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM8
-Mcu.IPNb=5
+Mcu.IP1=CAN2
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM8
+Mcu.IPNb=6
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA14
-Mcu.Pin11=PB8
-Mcu.Pin12=PB9
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin10=PC8
+Mcu.Pin11=PC9
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB8
+Mcu.Pin15=PB9
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PC0
-Mcu.Pin5=PC6
-Mcu.Pin6=PC7
-Mcu.Pin7=PC8
-Mcu.Pin8=PC9
-Mcu.Pin9=PA13
-Mcu.PinsNb=15
+Mcu.Pin5=PC4
+Mcu.Pin6=PB12
+Mcu.Pin7=PB13
+Mcu.Pin8=PC6
+Mcu.Pin9=PC7
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RCTx
@@ -46,6 +58,7 @@ MxCube.Version=6.8.1
 MxDb.Version=DB.6.0.81
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.CAN2_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -60,6 +73,11 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PB12.Locked=true
+PB12.Mode=CAN_Activate
+PB12.Signal=CAN2_RX
+PB13.Mode=CAN_Activate
+PB13.Signal=CAN2_TX
 PB8.Locked=true
 PB8.Mode=CAN_Activate
 PB8.Signal=CAN1_RX
@@ -78,6 +96,10 @@ PC14-OSC32_IN.GPIOParameters=PinState
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.PinState=GPIO_PIN_SET
 PC14-OSC32_IN.Signal=GPIO_Output
+PC4.GPIOParameters=PinState
+PC4.Locked=true
+PC4.PinState=GPIO_PIN_SET
+PC4.Signal=GPIO_Output
 PC6.Signal=S_TIM8_CH1
 PC7.Signal=S_TIM8_CH2
 PC8.Signal=S_TIM8_CH3
@@ -91,7 +113,7 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -115,7 +137,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_TIM8_Init-TIM8-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_TIM8_Init-TIM8-false-HAL-true,5-MX_CAN2_Init-CAN2-false-HAL-true
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=42000000
