1.打开can的重新提交，问题解决。 2.文件贴加#include "stm32f4xx_hal.h",解决__weak报错

--- a/can-test.ioc
+++ b/can-test.ioc
@@ -15,9 +15,10 @@ CAN2.BS2=CAN_BS2_3TQ
 CAN2.CalculateBaudRate=1000000
 CAN2.CalculateTimeBit=1000
 CAN2.CalculateTimeQuantum=71.42857142857143
-CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,NART,BS2,BS1
-CAN2.NART=DISABLE
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,NART,BS2,BS1,RFLM
+CAN2.NART=ENABLE
 CAN2.Prescaler=3
+CAN2.RFLM=DISABLE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
