--- a/can-test.ioc
+++ b/can-test.ioc
@@ -10,15 +10,14 @@ CAN1.CalculateTimeQuantum=47.61904761904762
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2,Prescaler,NART
 CAN1.NART=ENABLE
 CAN1.Prescaler=2
-CAN2.BS1=CAN_BS1_10TQ
-CAN2.BS2=CAN_BS2_3TQ
+CAN2.BS1=CAN_BS1_15TQ
+CAN2.BS2=CAN_BS2_5TQ
 CAN2.CalculateBaudRate=1000000
 CAN2.CalculateTimeBit=1000
-CAN2.CalculateTimeQuantum=71.42857142857143
-CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,NART,BS2,BS1,RFLM
+CAN2.CalculateTimeQuantum=47.61904761904762
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,NART,BS1,BS2,Prescaler
 CAN2.NART=ENABLE
-CAN2.Prescaler=3
-CAN2.RFLM=DISABLE
+CAN2.Prescaler=2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -59,7 +58,6 @@ MxCube.Version=6.8.1
 MxDb.Version=DB.6.0.81
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.CAN2_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
